<resources>
    <string name="app_name">UPX Android Miner</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="mining_pool_address">Mining Pool Address</string>
    <string name="username">Wallet Address:</string>
    <string name="cmdline">Cmdline</string>
    <string name="start">Start</string>
    <string name="help">Help</string>
    <string name="cmd">Cmd</string>
    <string name="stop">Stop</string>
    <string name="threads">Threads</string>
    <string name="max_cpu_usage">Max CPU</string>
    <string name="percent">%</string>
    <string name="hpers">H/s</string>
    <string name="accepted">accepted</string>
    <string name="cpus">Cores</string>
    <string name="use_worker_id">add worker id</string>
    <string name="urltext">www.uplexa.com</string>
    <string name="viewstats">View stats at:</string>
    <string name="buildString">uPlexa Android Miner\nBuild: v0.3.0 (06/21/2019)</string>
    <string name="createWallet">First, you will need to create a uPlexa wallet. This is the wallet you will receive UPX (uPlexa coins) to. To create a wallet you may download the official Android wallet from here: \nplay.google.com/store/apps/details?id=com.uplexa.upxwallet \nor use the web wallet at: \nhttps://wallet.uplexa.com\n\nOnce you have setup a wallet, simply enter your uPlexa wallet address (Starting with UPXxxxxxx) into the field (Replacing the current one). Now, adjust your settings. We recommend a setting of 50% Max CPU Usage. Click “Start” within the application (from the Miner page)\n\nCongratulations! You’re now mining uPlexa off of your Android device, powering transactions by others, and being rewarded with UPX coins. You may check your stats under the Stats page.\n\n<b>Why does the app slow down when the screen is off or when I am using other apps?</b> uPlexa Android Miner should not slow down or stop when using other apps. If it does, you may have to disable power saving. </string>
    <string name="abouttText">uPlexa Android Miner is an open-source miner for Android devices, allowing you to mine UPX coins on the uPlexa network. Running this software will consume an optional amount of your CPU. Running your CPU at a high setting for a prolonged duration may result in negative effects such as: battery drainage, slow response time, overheating, and may cause permanent damage to your device. We recommend only using this software on low settings (below 50% of your threads and below 50% CPU Usage). By using this application, you assume full responsibility for any potential damage that may be caused to your device by the uPlexa Android Miner.</string>
    <string name="aboutMining">uPlexa mining is the process of adding transaction records to the uPlexa private ledger of past transactions. This ledger of past transactions is called the block chain as it is a chain of blocks. The block chain serves to confirm transactions to the rest of the network as having taken place. By mining blocks on the uPlexa network, you help power transactions, whilst being rewarded a reward based off of the amount of shares your computer submits overtime.</string>
    <string-array name="threadNumbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="cpuPercent">
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>
</resources>
