<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="upx.uplexa.androidminer.MainActivity"
    > <!--  tools:openDrawer="start" -->


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/androidbackground"
        android:backgroundTint="#bb000000"
        android:backgroundTintMode="src_over"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#AA000000"
            android:elevation="4dp"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:gravity="center"
                android:paddingRight="60dp"
                android:src="@drawable/upxandroid" />

        </android.support.v7.widget.Toolbar>


        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mining_pool_address"
            android:visibility="invisible" />
<!--
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Check Stats at: https://uplexa.poolbux.com"
            android:textColor="#fff"
            android:textColorLink="#00ffde" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Mining to Address:"
                android:textColor="#fff" />

            <CheckBox
                android:id="@+id/use_worker_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/use_worker_id"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="No wallet set! Update your Wallet Address under 'Settings'"
                android:textColor="#fff" />

        </LinearLayout>





        <EditText
            android:id="@+id/pool"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:text=""
            android:visibility="invisible" />





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/threads"
                android:textColor="#fff" />

            <Spinner
                android:id="@+id/threads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/threadNumbers"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/cpus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/max_cpu_usage"
                android:textColor="#fff" />

            <Spinner
                android:id="@+id/maxcpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/cpuPercent"
                android:spinnerMode="dropdown" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textColor="#fff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="0"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/hpers"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/accepted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="0"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accepted"
                android:textColor="#fff" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#CC000000"
                android:text="..."
                android:textColor="#05df00"
                android:visibility="visible" />

        </ScrollView>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="40dp"
            android:paddingBottom="15dp"
            android:textColor="#fff">


            <Button
                android:id="@+id/start"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/button_selector"
                android:text="@string/start"
                android:textColor="#ffffff"
                app:layout_constraintBaseline_toBaselineOf="@+id/stop"
                app:layout_constraintEnd_toStartOf="@+id/stop" />


            <Button
                android:id="@+id/stop"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:background="@drawable/button_selector_purp"
                android:text="@string/stop"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawermenu" />

</android.support.v4.widget.DrawerLayout>



